refactor : 상세페이지 조회 누락 데이터 추가 및 로직 수정